# lumendeck

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  apply_cuda_fix.py  cuda-runtime-fix.patch  index.html  package-lock.json  package.json  run.bat  start.bat  tsconfig.json  vite.config.ts  xhan145.txt
.claude/: launch.json
.github/: FUNDING.yml
bridge/: README.md  adapters.py  build_sidecar.py  civitai.py  cloud.py  diffusers_backend.py  lumendeck-bridge.spec  main.py  renderer.py  scanner.py  scorer.py  server.py  test_bundled_python.py  test_civitai.py  test_cloud.py  test_controlnet.py  test_diffusers_backend.py  test_evolve.py  test_hardware.py  test_motion_render.py  test_renderer.py  test_server.py  test_svd.py
docs/: 3d-visual-overhaul.md  CODEX_PROMPT.md  CODEX_PROMPT_CLOUD.md  RELEASING.md  constellation.md  diagnostics.md  hardware-profiles.md  portable.md  turboForge.md
scripts/: build-portable.mjs  fetch-python.mjs  release.mjs  releaseLib.d.mts  releaseLib.mjs
src/: App.tsx  globals.d.ts
src-tauri/: .gitignore  Cargo.toml  gen_icon.py  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: animateStill.test.ts  anomaly.test.ts  audioReactivity.test.ts  backend.test.ts  bridgeModelDownload.test.ts  bridgeRenderer.test.ts  capsules.test.ts  chromeVisibility.test.ts  cloudAdapter.test.ts  cloudBackendSettings.test.ts  constellation.test.ts  constellationData.test.ts  controlnet.test.ts  craftBrain.test.ts  evolve.test.ts  (+66 more)
(+265 files in other folders)
